add repositories search feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="error_message">There was a problem loading the pokemon, please try again!</string>
     <string name="error_reload">Reload</string>
     <string name="title_activity_maps_sample">Map</string>
+
+    <string name="repository_name">Name: %1$s</string>
+    <string name="repository_url">Url: %1$s</string>
+    <string name="repository_owner">Owner: %1$s</string>
 </resources>
